<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cesarbassani.meusconvidados.views.AllInvitedFragment">

    <LinearLayout
        android:id="@+id/linear_dashboard"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextPresent"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/presentes"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorTextAbsent"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/ausentes"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextTotal"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/total"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_present_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextPresent"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/presente"/>

            <TextView
                android:id="@+id/text_absent_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextAbsent"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/ausente"/>

            <TextView
                android:id="@+id/text_all_invited"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textColor="@color/colorTextTotal"
                android:gravity="center"
                android:text="@string/total"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear_dashboard"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_all_invited"
        android:layout_width="match_parent"
        android:layout_below="@+id/view_divider"
        android:layout_height="match_parent" />
</RelativeLayout>
